# genreflow

./: .dockerignore  .editorconfig  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  compose.yaml  logging_config.json  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yaml
backend/: Dockerfile  __init__.py  pyproject.toml
backend/app/: __init__.py  app.py  logging_utils.py  predict.py  routes_file.py  schemas.py  spotify_client.py  spotify_routes.py
backend/tests/: test_healthz.py  test_predict_file.py  test_spotify_endpoint.py
docker/: Dockerfile
docs/: architecture.md  maintenance.md  roadmap.md
frontend/: Dockerfile  app.py
frontend/static/: app.js  styles.css
frontend/templates/: index.html
k8s/: deployment.yaml  ingress.yaml  namespace.yaml  service.yaml
k8s/argocd/: application.yaml  backend-app.yaml  frontend-app.yaml
k8s/backend/: deployment.yaml  dockerhub-secret-sealed.yaml  ingress.yaml  namespace.yaml  service.yaml  serviceaccount.yaml
k8s/base/backend/: deployment.yaml  ingress.yaml  kustomization.yaml
k8s/base/frontend/: deployment.yaml  namespace.yaml  serviceaccount.yaml
k8s/frontend/: deployment.yaml  dockerhub-secret-sealed.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
k8s/overlays/home/backend/: kustomization.yaml
k8s/overlays/home/frontend/: kustomization.yaml
scripts/: predict_files_bulk.py  shutdow_pis.sh
server/: __init__.py  app.py  predict.py  routes_file.py  schemas.py  utils_audio.py
server/tests/: test_healthz.py  test_predict_file.py
