
[tool.ruff]
line-length = 100
target-version = "py311"

# Enable Ruff’s formatter (Black-compatible)
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# Optional: extend Ruff’s rule set
[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "C4", "D"]
ignore = ["D203", "D212"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

# Poetry config
[tool.poetry]
name = "genreflow"
version = "0.1.0"
description = "Kubernetes-native music genre classifier"
authors = ["Luis Rodriguez"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "*"}
numpy = "*"
scipy = "*"
librosa = "*"
soundfile = "*"
pydantic = "^2"
requests = "*"
prometheus-client = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
ruff = "*"
mypy = "*"
httpx = "*"
types-requests = "*"
